# MGIP

./: .gitignore  .rhi-boundary-allow  .rhi-boundary-baseline.json  CMakeLists.txt  Demo.txt  README.md  build_debug_with_vsdevcmd.cmd  ddgi-implementation-plan.md  gpu_driven_mobile_execution_plan.md  reac2023_analysis.md  rhi-migration-plan.md  rhi-native-violation-fix-report.md  scene_asset_parallel_upload_plan.md  setup_android_gradle.bat  worklist.md
android/: build.gradle  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
app/: AndroidNativeApp.cpp  MinimalLatestApp.cpp  MinimalLatestApp.h
cmake/: FindSlang.cmake
common/: Common.h  Handles.h  ProfilerMarkers.h  logger.h
docs/: lighting-commercial-alignment-tasks.md  rhi-backend-mapping.md
gfx/: Context.h  GBuffer.h  ResourceAllocator.h  SamplerPool.h
loader/: GltfLoader.cpp  GltfLoader.h  Ktx2Loader.cpp  Ktx2Loader.h  SDFLoader.cpp  SDFLoader.h  SceneCacheSerializer.cpp  SceneCacheSerializer.h
render/: ArgumentTables.cpp  ArgumentTables.h  AsyncLoadingCoordinator.cpp  AsyncLoadingCoordinator.h  BatchUploadContext.cpp  BatchUploadContext.h  BindGroups.h  CSMShadowResources.cpp  CSMShadowResources.h  Camera.cpp  Camera.h  ClipSpaceConvention.h  DDGIConfig.h  DDGIProbeVolume.cpp  DDGIProbeVolume.h  DebugInteropBridge.cpp  DebugInteropBridge.h  DebugRegistry.h  DrawPacket.h  DrawStream.cpp  DrawStream.h  DrawStreamDecoder.cpp  DrawStreamDecoder.h  DrawStreamRecorder.cpp  DrawStreamRecorder.h  DrawStreamWriter.cpp  DrawStreamWriter.h  FrameSubmission.cpp  FrameSubmission.h  GPUBatchBuilder.cpp  GPUBatchBuilder.h  GPUDrivenLightResources.cpp  GPUDrivenLightResources.h  GPUDrivenRenderer.cpp  GPUDrivenRenderer.h  GPUMeshletBuffer.cpp  GPUMeshletBuffer.h  GPUSceneRegistry.cpp  GPUSceneRegistry.h  HiZDepthPyramid.cpp  (+31 more)
render/passes/: CSMShadowPass.cpp  DDGIDebugPass.cpp  DDGIDebugPass.h  DDGIProbeUpdatePass.cpp  DDGIProbeUpdatePass.h  DDGIRayTracePass.cpp  DDGIRayTracePass.h  DebugPass.cpp  DebugPrimitives.h  DepthPrepass.cpp  ForwardPass.cpp  GBufferPass.cpp  GPUDrivenAOPass.cpp  GPUDrivenAOPass.h  GPUDrivenBloomDownsamplePass.cpp  GPUDrivenBloomDownsamplePass.h  GPUDrivenBloomPrefilterPass.cpp  GPUDrivenBloomPrefilterPass.h  GPUDrivenCSMShadowPass.cpp  GPUDrivenCSMShadowPass.h  GPUDrivenClusteredLightCullingPass.cpp  GPUDrivenClusteredLightCullingPass.h  GPUDrivenCullingPass.cpp  GPUDrivenCullingPass.h  GPUDrivenDebugPass.cpp  GPUDrivenDebugPass.h  GPUDrivenDepthPrepass.cpp  GPUDrivenDepthPrepass.h  GPUDrivenDepthPyramidPass.cpp  GPUDrivenDepthPyramidPass.h  GPUDrivenFinalColorPass.cpp  GPUDrivenFinalColorPass.h  GPUDrivenForwardPass.cpp  GPUDrivenForwardPass.h  GPUDrivenGBufferPass.cpp  GPUDrivenGBufferPass.h  GPUDrivenImguiPass.cpp  GPUDrivenImguiPass.h  GPUDrivenLightCullingPass.cpp  GPUDrivenLightCullingPass.h  (+23 more)
rhi/: RHIArgumentTable.h  RHIBindingResolver.h  RHIBindlessTypes.h  RHIBoundary.h  RHICapabilities.h  RHICommandBuffer.h  RHICommandList.h  RHICommandPool.h  RHIDescriptor.h  RHIDevice.h  RHIEncoder.h  RHIFactory.cpp  RHIFactory.h  RHIFrameContext.h  RHIHandles.h  RHIPipeline.h  RHIQueue.h  RHIResourceLifetime.h  RHIShaderReflection.h  RHIStageBarrier.h  RHISurface.h  RHISwapchain.h  RHISynchronization.h  RHITypes.h
rhi/d3d12/: D3D12CommandList.cpp  D3D12CommandList.h  D3D12Device.cpp  D3D12Device.h  D3D12FrameContext.cpp  D3D12FrameContext.h  D3D12Pipelines.cpp  D3D12Pipelines.h  D3D12Swapchain.cpp  D3D12Swapchain.h  README.md
rhi/metal/: MetalCommandList.cpp  MetalCommandList.h  MetalDevice.cpp  MetalDevice.h  MetalFrameContext.cpp  MetalFrameContext.h  MetalPipelines.cpp  MetalPipelines.h  MetalSwapchain.cpp  MetalSwapchain.h  README.md
rhi/vulkan/: VulkanAdoptedBindGroup.h  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanCommandList.cpp  VulkanCommandList.h  VulkanCommandPool.cpp  VulkanCommandPool.h  VulkanDevice.cpp  VulkanDevice.h  VulkanDeviceCreateInfo.h  VulkanDeviceInterop.h  VulkanFormatUtils.h  VulkanFrameContext.cpp  VulkanFrameContext.h  VulkanFrameOps.h  VulkanPipelines.cpp  VulkanPipelines.h  VulkanResourceTable.cpp  VulkanResourceTable.h  VulkanSurface.cpp  VulkanSurface.h  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanSynchronization.cpp  VulkanSynchronization.h
rhi/vulkan/internal/: VulkanCommon.h  VulkanDebugUtil.h
scene/: ParallelSceneLoader.cpp  ParallelSceneLoader.h  SceneAsset.h  SceneAssetBuilder.cpp  SceneAssetBuilder.h  SceneAssetSerializer.cpp  SceneAssetSerializer.h  SceneAssetView.h  SceneJobSystem.cpp  SceneJobSystem.h  SceneLight.h  SceneLoadJob.h  SceneLoadJobGraph.h  SceneUploadPlan.h  SceneUploadPlanner.cpp  SceneUploadPlanner.h  TransformSystem.cpp  TransformSystem.h
shaders/: ao_denoise.slang  clustered_light_cull.slang  ddgi_common.slang  ddgi_depth_border_update.slang  ddgi_depth_probe_update.slang  ddgi_gi_sdf_rays.slang  ddgi_irradiance_border_update.slang  ddgi_irradiance_probe_update.slang  ddgi_probe_visualization.slang  ddgi_sample_probe.slang  gtao.slang  sdf_common.slang  sdf_global_clear.slang  sdf_global_compose.slang  sdf_global_mipmap.slang  shader.debug.slang  shader.depth_prepass.slang  shader.forward.slang  shader.gbuffer.slang  shader.gpu_culling.slang  shader.ibl_common.slang  shader.ibl_dfg.slang  shader.ibl_irradiance.slang  shader.ibl_prefilter.slang  shader.light.slang  shader.light_gpu_driven.slang  shader.rast.slang  shader.shadow.slang  shader.sky.slang  shader.transparent_visibility_patch.slang  shader_io.h  ssr_denoise.slang  ssr_trace.slang
tools/: README.md  VULKAN_SMOKE_RUNBOOK.md  check_rhi_boundary.py  compress_dds_bc7_ktx2.cmd  compress_resources_astc_ktx2.cmd  convert_dds_to_bc7_ktx2.cmd  generate_android_gradle_project.bat  generate_android_gradle_project.ps1  phase7_zero_baseline.json  texture_converter.cpp  verify_phase7_gate.py
tools/sdf_baker/: SDFBaker.cpp  SDFBaker.h  main.cpp
vulkan/: vk_enum_string_helper.h
